df_clean is a df with only the vars we care about

--- a/Part 1.Rmd
+++ b/Part 1.Rmd
@@ -1,6 +1,7 @@
-
 # Phase 1!
+
 ## Loading Files and Data Cleaning
+
 ```{r message=FALSE, warning=FALSE, results='hide'}
 # required packages
 install.packages("readxl")
@@ -9,7 +10,6 @@ install.packages("ggplot2")
 install.packages("tidyverse")
 install.packages("corrplot")
 ```
-
 
 ```{r}
 # converting xlsx to csv, only needs to be run once
@@ -27,16 +27,39 @@ head(df)
 ```
 
 ## Data Cleaning
+
 TODO: DO THIS THING
+
 ```{r}
+df_clean <- df %>% 
+  mutate("AVG_S11" = (MAT_S11 + CR_S11 + CC_S11 + BIO_S11 + ENG_S11) / 5) %>%
+  select(G_SC, AVG_S11, GENDER, SCHOOL_NAT, SEL, SEL_IHE)
 
 ```
 
 ```{r}
+# IM EXPERIMENTING HERE DON'T JUDGE
+
+library(ggplot2)
+library(GGally)
+
+# Convert categorical variables to factors
+#df_clean$GENDER <- as.factor(df$GENDER)
+#df_clean$SCHOOL_NAT <- as.factor(df$SCHOOL_NAT)
+
+ggpairs(df_clean, 
+        aes(color = GENDER),  
+        lower = list(continuous = wrap("points", alpha = 0.5)),  # Scatterplot for numeric vs numeric
+        upper = list(continuous = wrap("points", alpha = 0.5)),  # Scatterplot in upper triangle too
+        diag = list(continuous = wrap("densityDiag")),           # Density plots for numeric vars
+        combo = list(continuous = wrap("box_no_facet")))         # Boxplot for categorical vs numeric
 ```
+
 
 ## Data Visualization
+
 ### Summary Statistics
+
 ```{r}
 library(ggplot2)
 library(tidyr)
@@ -48,6 +71,7 @@ summary(df)
 ```
 
 ### Visualizations for Numeric Data
+
 ```{r}
 # filtering for continuous variables
 df_numeric <- df %>% 
@@ -55,7 +79,6 @@ df_numeric <- df %>%
   select(where(~ length(unique(.)) > 5))
 head(df_numeric)
 ```
-
 
 ```{r}
 lapply(names(df_numeric), function(col) {
@@ -65,20 +88,17 @@ lapply(names(df_numeric), function(col) {
 })
 ```
 
-
 ```{r}
 # correlation matrix
 cor_matrix <- cor(df_numeric, use = "complete.obs")
 corrplot(cor_matrix, method = "circle")
 ```
 
-
 ```{r}
 # Relationship between G_SC and S11 tests
 df_numerical_temp <- select(df_numeric, -c(QR_PRO, CR_PRO, CC_PRO, ENG_PRO, WC_PRO, FEP_PRO, PERCENTILE))
 plot(df_numerical_temp, pch = 19, cex = 0.10)
 ```
-
 
 ```{r}
 # Relationship between G_SC and PRO tests
@@ -93,12 +113,12 @@ plot(df_numeric$COD_S11, df_numeric$G_SC, pch = 19, cex = 0.5)
 ```
 
 ### Visualizing Categorical Data
+
 ```{r}
 continuous_cols <- colnames(df_numeric)
 df_categorical <- select(df, -c(continuous_cols, Cod_SPro, COD_S11, UNIVERSITY, SCHOOL_NAME))
 head(df_categorical)
 ```
-
 
 ```{r}
 lapply(names(df_categorical), function(col) {
@@ -109,6 +129,7 @@ lapply(names(df_categorical), function(col) {
 ```
 
 ### Regression model
+
 ```{r}
 # selecting only chosen variables
 df$AVG_S11 <- rowMeans(select(df, c(MAT_S11, CR_S11, CC_S11, BIO_S11, ENG_S11)), na.rm = TRUE)
@@ -117,11 +138,9 @@ target <- "G_SC"
 df_model <- df %>% select(all_of(features), all_of(target))
 ```
 
-
 ```{r}
 head(df_model)
 ```
-
 
 ```{r}
 lr <- lm(G_SC ~ ., data = df_model)
@@ -129,10 +148,10 @@ summary(lr)
 ```
 
 ### Residual Plots
+
 ```{r}
 plot(lr, which = 1)
 ```
-
 
 ```{r}
 # residual plots against each variable
@@ -143,17 +162,16 @@ lapply(features, function(feature) {
 })
 ```
 
-
 ```{r}
 # qqplot
 qqnorm(lr$residuals)
 ```
+
 ```{r}
 # Standardized Residuals
 std_residual <- rstandard(lr)
 hist(std_residual, breaks = 50, xlab="Standardized Residual", main="Histogram of Standardized Residuals")
 ```
-
 
 ```{r}
 # response vs fitted values
